# src/modules/users/user.controller.ts
@@ -1,6 +1,7 @@
 import { Get, Route, Tags, Post, Body, Path } from "tsoa";
-import { User } from "../../models";
+import { User } from "../../shared";
 import UserEntity from "./user.entity";
+import {IUserCreate} from "../../shared/types/IUser";
 
 @Route("users")
 @Tags("User")
@@ -15,7 +16,7 @@ export default class UserController {
     }
 
     @Post("/")
-    public async createUser(@Body() body: any): Promise<UserEntity> {
+    public async createUser(@Body() body: IUserCreate): Promise<UserEntity> {
         return await this.userInstance.save(body);
     }
 }
