# src/shared/routes.ts
@@ -1,12 +1,16 @@
 import express from "express";
-import PingController from "../controllers/ping";
 import UserRouter from '../modules/users/user.router'
+// @ts-ignore
+import appInfo from "../../package.json";
+
 const router = express.Router();
 router.use("/users", UserRouter);
+
 router.get("/ping", async (_req, res) => {
-    const controller = new PingController();
-    const response = await controller.ping();
-    return res.send(response);
+    return res.send({
+        version: appInfo?.version || "0.0.1",
+        message: "Server is up and running",
+    });
 });
 
 export default router;
