# src/shared/types/IUser.ts
@@ -1,0 +1,5 @@
+export interface IUserCreate{
+    firstName: string;
+    lastName: string;
+    email: string;
+}
